--- a/index.html
+++ b/index.html
@@ -23,14 +23,49 @@
       height: 100vh;
       object-fit: cover;
     }
+
+    #volume-btn {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      z-index: 10;
+      background: none;
+      border: none;
+      cursor: pointer;
+      padding: 0;
+    }
+
+    #volume-icon {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      object-fit: cover;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
+    }
   </style>
 </head>
 
 <body>
-  <video autoplay muted loop playsinline>
+  <video id="bg-video" autoplay muted loop playsinline>
     <source src="https://file.garden/aG-4EJK0aGSh7J2l/Valmiel.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
+
+  <button id="volume-btn">
+    <img id="volume-icon" src="https://i.postimg.cc/tgp8Z1N4/20240429-214742.jpg" alt="Volume Icon">
+  </button>
+
+  <script>
+    const video = document.getElementById('bg-video');
+    const volumeBtn = document.getElementById('volume-btn');
+    const volumeIcon = document.getElementById('volume-icon');
+
+    volumeBtn.addEventListener('click', () => {
+      video.muted = !video.muted;
+
+      volumeIcon.style.opacity = video.muted ? '0.4' : '1';
+    });
+  </script>
 </body>
 
 </html>
