--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
       cursor: pointer;
       padding: 0;
 
-      /* ✅ Remove mobile tap highlight */
       -webkit-tap-highlight-color: transparent;
       touch-action: manipulation;
     }
@@ -57,7 +56,7 @@
 </head>
 
 <body>
-  <video id="bg-video" autoplay muted loop playsinline>
+  <video id="bg-video" autoplay muted loop playsinline preload="auto">
     
   </video>
 
