--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Valmiel</title>
+  <title>Magostrophic</title>
   <style>
     html,
     body {
@@ -56,7 +56,6 @@
       transition: opacity 0.2s ease;
     }
 
-    /* === LOADING SCREEN === */
     #loading-screen {
       position: fixed;
       top: 0;
@@ -124,27 +123,22 @@
 </head>
 
 <body>
-  <!-- Loading screen with animated shapes -->
   <div id="loading-screen">
     <div class="shapes">
       <div class="shape circle"></div>
       <div class="shape triangle"></div>
       <div class="shape square"></div>
     </div>
-    <p>Loading...</p>
   </div>
 
-  <!-- Video background -->
   <video id="bg-video" autoplay muted loop playsinline preload="auto">
-    <!-- Source is added dynamically -->
+ 
   </video>
 
-  <!-- Volume control button -->
   <button id="volume-btn">
     <img id="volume-icon" src="https://i.postimg.cc/tgp8Z1N4/20240429-214742.jpg" alt="Volume Icon">
   </button>
 
-  <!-- Script: random video selection + loader hide -->
   <script>
     const video = document.getElementById('bg-video');
     const volumeBtn = document.getElementById('volume-btn');
@@ -155,7 +149,9 @@
       "https://file.garden/aG-4EJK0aGSh7J2l/Valmiel.mp4",
       "https://file.garden/aG-4EJK0aGSh7J2l/Marika.mp4",
       "https://file.garden/aG-4EJK0aGSh7J2l/Rangiku.mp4",
-      "https://file.garden/aG-4EJK0aGSh7J2l/Honoka.mp4"
+      "https://file.garden/aG-4EJK0aGSh7J2l/Honoka.mp4",
+      "https://file.garden/aG-4EJK0aGSh7J2l/Ahri.mp4",
+      "https://file.garden/aG-4EJK0aGSh7J2l/Hinata.mp4"
     ];
 
     const randomVideo = videos[Math.floor(Math.random() * videos.length)];
@@ -165,12 +161,10 @@
     video.appendChild(source);
     video.load();
 
-    // Hide loading screen once video is ready
     video.oncanplaythrough = () => {
       document.getElementById("loading-screen").style.display = "none";
     };
 
-    // Volume toggle
     volumeBtn.addEventListener('click', () => {
       video.muted = !video.muted;
       volumeIcon.style.opacity = video.muted ? '0.4' : '1';
