--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
     const volumeBtn = document.getElementById('volume-btn');
     const volumeIcon = document.getElementById('volume-icon');
 
+    // Detect mobile device
     function isMobileDevice() {
       return /Android|iPhone|iPad|iPod|Opera Mini|IEMobile|Mobile/i.test(navigator.userAgent);
     }
@@ -153,7 +154,8 @@
       "https://file.garden/aG-4EJK0aGSh7J2l/low/Rangiku-low.mp4",
       "https://file.garden/aG-4EJK0aGSh7J2l/low/Honoka-low.mp4",
       "https://file.garden/aG-4EJK0aGSh7J2l/low/Ahri-low.mp4",
-      "https://file.garden/aG-4EJK0aGSh7J2l/low/Hinata-low.mp4"
+      "https://file.garden/aG-4EJK0aGSh7J2l/low/Hinata-low.mp4",
+      "https://file.garden/aG-4EJK0aGSh7J2l/low/Black%20Widow-low.mp4"
     ];
 
     const desktopVideos = [
@@ -163,7 +165,8 @@
       "https://file.garden/aG-4EJK0aGSh7J2l/high/Rangiku.mp4",
       "https://file.garden/aG-4EJK0aGSh7J2l/high/Honoka.mp4",
       "https://file.garden/aG-4EJK0aGSh7J2l/high/Ahri.mp4",
-      "https://file.garden/aG-4EJK0aGSh7J2l/high/Hinata.mp4"
+      "https://file.garden/aG-4EJK0aGSh7J2l/high/Hinata.mp4",
+      "https://file.garden/aG-4EJK0aGSh7J2l/high/Black%20Widow.mp4"
     ];
 
     const videoList = isMobileDevice() ? mobileVideos : desktopVideos;
