--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
       background: black;
       overflow: hidden;
       touch-action: manipulation;
+      overscroll-behavior: none;
+      -ms-touch-action: none;
+      zoom: 100%;
+    }
+
+    body {
+      -webkit-user-select: none;
+      -webkit-touch-callout: none;
     }
 
     video {
@@ -114,6 +122,7 @@
         transform: translateY(0) scale(1);
         opacity: 1;
       }
+
       50% {
         transform: translateY(-20px) scale(1.15);
         opacity: 0.8;
@@ -142,7 +151,6 @@
     const volumeBtn = document.getElementById('volume-btn');
     const volumeIcon = document.getElementById('volume-icon');
 
-    // Detect mobile device
     function isMobileDevice() {
       return /Android|iPhone|iPad|iPod|Opera Mini|IEMobile|Mobile/i.test(navigator.userAgent);
     }
@@ -170,11 +178,9 @@
     ];
 
     const videoList = isMobileDevice() ? mobileVideos : desktopVideos;
-
     const randomVideo = videoList[Math.floor(Math.random() * videoList.length)];
     video.src = randomVideo;
     video.load();
-
 
     video.oncanplaythrough = () => {
       document.getElementById("loading-screen").style.display = "none";
@@ -184,6 +190,29 @@
       video.muted = !video.muted;
       volumeIcon.style.opacity = video.muted ? '0.4' : '1';
     });
+
+    window.addEventListener('wheel', function (e) {
+      if (e.ctrlKey || e.metaKey) e.preventDefault();
+    }, { passive: false });
+
+    window.addEventListener('keydown', function (e) {
+      if ((e.ctrlKey || e.metaKey) && ['+', '-', '='].includes(e.key)) {
+        e.preventDefault();
+      }
+    });
+
+    document.addEventListener('gesturestart', e => e.preventDefault());
+    document.addEventListener('gesturechange', e => e.preventDefault());
+    document.addEventListener('gestureend', e => e.preventDefault());
+
+    let lastTouchEnd = 0;
+    document.addEventListener('touchend', function (e) {
+      const now = new Date().getTime();
+      if (now - lastTouchEnd <= 300) {
+        e.preventDefault();
+      }
+      lastTouchEnd = now;
+    }, false);
   </script>
 </body>
 
