--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       height: 100%;
       background: black;
       overflow: hidden;
-      touch-action: manipulation;
+      touch-action: none;
       overscroll-behavior: none;
       -ms-touch-action: none;
       zoom: 100%;
@@ -22,6 +22,9 @@
     body {
       -webkit-user-select: none;
       -webkit-touch-callout: none;
+      user-select: none;
+      -ms-content-zooming: none;
+      -webkit-text-size-adjust: none;
     }
 
     video {
@@ -201,9 +204,9 @@
       }
     });
 
-    document.addEventListener('gesturestart', e => e.preventDefault());
-    document.addEventListener('gesturechange', e => e.preventDefault());
-    document.addEventListener('gestureend', e => e.preventDefault());
+    ['gesturestart', 'gesturechange', 'gestureend'].forEach(evt =>
+      document.addEventListener(evt, e => e.preventDefault())
+    );
 
     let lastTouchEnd = 0;
     document.addEventListener('touchend', function (e) {
