--- a/index.html
+++ b/index.html
@@ -29,14 +29,12 @@
 
     video {
       position: absolute;
-      top: 50%;
-      left: 50%;
-      width: auto;
-      height: auto;
-      min-width: 100%;
-      min-height: 100%;
-      transform: translate(-50%, -50%);
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
       object-fit: cover;
+      z-index: 0;
     }
 
     #volume-btn {
