--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </div>
   </div>
 
-  <video id="bg-video" autoplay muted loop playsinline preload="auto" controlsList="nodownload nofullscreen noremoteplayback" oncontextmenu="return false;" disablepictureinpicture></video>
+  <video id="bg-video" autoplay muted loop playsinline preload="none" controlsList="nodownload nofullscreen noremoteplayback" oncontextmenu="return false;" disablepictureinpicture></video>
 
   <button id="volume-btn">
     <img id="volume-icon" src="https://i.postimg.cc/tgp8Z1N4/20240429-214742.jpg" alt="Volume Icon">
@@ -185,6 +185,13 @@
 
     video.oncanplaythrough = () => {
       document.getElementById("loading-screen").style.display = "none";
+
+      setTimeout(() => {
+        if (!video.paused && video.readyState >= 2) {
+          video.removeAttribute('src');
+          video.load();
+        }
+      },15000)
     };
 
     volumeBtn.addEventListener('click', () => {
