--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </div>
   </div>
 
-  <video id="bg-video" autoplay muted loop playsinline preload="none" controlsList="nodownload nofullscreen noremoteplayback" oncontextmenu="return false;" disablepictureinpicture></video>
+  <video id="bg-video" autoplay muted loop playsinline preload="metadata" controlsList="nodownload nofullscreen noremoteplayback" oncontextmenu="return false;" disablepictureinpicture></video>
 
   <button id="volume-btn">
     <img id="volume-icon" src="https://i.postimg.cc/tgp8Z1N4/20240429-214742.jpg" alt="Volume Icon">
